# NJOY2016

./: .gitattributes  .gitignore  .travis.yml  2019-02-21_NJOY-2016.json  CMakeLists.txt  Dockerfile  Gemfile  LICENSE  LICENSE.md  NJOY2016_questions.docx  README-jekyll.md  README.md  ReleaseNotes.md  _config.yml  acedo.f90  acefc.f90  acer.f90  appveyor.yml  bematal.inp  broadr.f90  buildspec.yml  ccccr.f90  cmake.py  collect_subprojects.py  compiler_configuration.py  configuration.py  description.py  errorr.f90  gaminr.f90  gaspr.f90  generate.py  heatr.f90  locale.f90  mainio.f90  matxsr.f90  mixr.f90  plotr.f90  pyleapr.py  pyproject.toml  resxsr.f90  (+6 more)
tests/: CMakeLists.txt  CTestTestfile.cmake  execute.py
tests/01/: CMakeLists.txt  CTestTestfile.cmake  referenceOutput  referenceTape25
tests/02/: CMakeLists.txt  input  referenceOutput  referenceTape28  referenceTape29
tests/03/: CMakeLists.txt  input  referenceOutput  tape30
tests/04/: CMakeLists.txt  input  referenceOutput  referenceTape23  referenceTape24  referenceTape25  tape20
tests/05/: CMakeLists.txt  Makefile  input  referenceOutput  referenceTape33
tests/06/: CMakeLists.txt  input  referenceOutput  referenceTape32
tests/07/: CMakeLists.txt  input  referenceOutput  referenceTape26  referenceTape28
tests/08/: CMakeLists.txt  Makefile  input  referenceOutput  referenceTape25  referenceTape28
tests/09/: CMakeLists.txt  Makefile  input  referenceOutput  referenceTape24
tests/10/: referenceOutput  referenceTape26  referenceTape28
tests/11/: CMakeLists.txt  cmake_install.cmake  referenceOutput  referenceTape27  referenceTape28
tests/12/: referenceOutput  referenceTape22  referenceTape24
tests/13/: CMakeLists.txt  referenceOutput  referenceTape26  referenceTape28  referenceTape36  tape20
tests/14/: CMakeLists.txt  referenceOutput  referenceTape31  referenceTape36
tests/15/: CMakeLists.txt  input  referenceOutput  referenceTape25  referenceTape26  referenceTape27  referenceTape36  referenceTape45  referenceTape46  referenceTape47  referenceTape91
tests/16/: CMakeLists.txt  CTestTestfile.cmake  referenceOutput  referenceTape26  referenceTape27  referenceTape36  referenceTape46
tests/17/: CMakeLists.txt  referenceOutput  referenceTape26  referenceTape91  referenceTape92  referenceTape93  referenceTape99  tape22
tests/18/: CMakeLists.txt  input  referenceOutput  referenceTape28  referenceTape39  referenceTape91
tests/19/: CMakeLists.txt  input  referenceOutput  referenceTape27  referenceTape29
tests/20/: CMakeLists.txt  CTestTestfile.cmake  referenceOutput  referenceTape23  referenceTape27
tests/21/: CMakeLists.txt  CTestTestfile.cmake  input
tests/22/: CMakeLists.txt  Makefile  input  referenceTape20
tests/23/: CMakeLists.txt  input  referenceTape20
tests/24/: CMakeLists.txt
tests/25/: CMakeLists.txt  input  referenceTape70  referenceTape71
tests/26/: CMakeLists.txt  Makefile  referenceTape40
tests/27/: CMakeLists.txt  input  referenceTape46  referenceTape47  referenceTape56
tests/28/: CMakeLists.txt  CTestTestfile.cmake  input  referenceTape34  referenceTape44  referenceTape54
tests/29/: CMakeLists.txt  input  referenceTape35  referenceTape45  referenceTape55
tests/30/: CMakeLists.txt  input  referenceTape43  referenceTape44  referenceTape45
tests/31/: CMakeLists.txt
tests/32/: CMakeLists.txt  input
tests/33/: CMakeLists.txt  Makefile  input
tests/34/: CMakeLists.txt  input
tests/35/: CMakeLists.txt  CTestTestfile.cmake  input
tests/36/: CMakeLists.txt  CTestTestfile.cmake  input  referenceTape34  referenceTape44
tests/37/: CMakeLists.txt  referenceTape34
tests/38/: CMakeLists.txt  Makefile  referenceTape34  referenceTape44
tests/39/: CMakeLists.txt  referenceTape34  referenceTape44
tests/40/: CMakeLists.txt  input  referenceTape34
tests/41/: CMakeLists.txt  CTestTestfile.cmake  input  referenceTape34
tests/42/: CMakeLists.txt  Makefile  input  referenceTape34
tests/43/: CMakeLists.txt  input  referenceTape35
tests/44/: CMakeLists.txt  Makefile  referenceTape35
tests/45/: CMakeLists.txt  Makefile  referenceTape40
tests/46/: CMakeLists.txt  CTestTestfile.cmake  input  referenceTape34
tests/47/: CMakeLists.txt  input  referenceTape45  referenceTape47  referenceTape55  referenceTape57  referenceTape58
tests/48/: CMakeLists.txt  input  referenceTape27  referenceTape28
tests/49/: CMakeLists.txt  input
tests/50/: CMakeLists.txt  input  referenceTape33  referenceTape34  referenceTape35
tests/51/: CMakeLists.txt  input  referenceTape33  referenceTape34  referenceTape35
tests/52/: CMakeLists.txt  referenceTape33  referenceTape34  referenceTape35
tests/53/: CMakeLists.txt  referenceTape33  referenceTape34  referenceTape35
tests/54/: CMakeLists.txt  input  referenceTape33  referenceTape34  referenceTape35
tests/55/: CMakeLists.txt  input
tests/56/: CMakeLists.txt  input  referenceTape31  referenceTape34  referenceTape37
tests/57/: CMakeLists.txt  input  referenceTape31  referenceTape34  referenceTape37
tests/58/: CMakeLists.txt  input  referenceTape31  referenceTape34  referenceTape37
tests/59/: CMakeLists.txt  input  referenceTape27
tests/60/: CMakeLists.txt  input
tests/61/: CMakeLists.txt  input  referenceTape71  referenceTape72
tests/62/: CMakeLists.txt  input  referenceTape33  referenceTape34  referenceTape35
tests/63/: CMakeLists.txt
tests/64/: CMakeLists.txt  input  referenceTape31  referenceTape34  referenceTape37
tests/65/: CMakeLists.txt  input  referenceTape41
tests/66/: CMakeLists.txt  input
tests/67/: CMakeLists.txt  input  referenceTape55  referenceTape71  referenceTape76
tests/68/: CMakeLists.txt  input  referenceTape55  referenceTape71  referenceTape76
tests/69/: CMakeLists.txt  input  referenceTape55  referenceTape71  referenceTape76
tests/70/: CMakeLists.txt  input  referenceTape55  referenceTape71  referenceTape76
tests/71/: CMakeLists.txt  referenceTape33  referenceTape35
tests/72/: CMakeLists.txt  input  referenceTape41  referenceTape44  referenceTape54
tests/73/: CMakeLists.txt  (+1 more)
(+1258 files in other folders)
