[build-system]
requires = ["scikit-build-core", "setuptools-scm"]
build-backend = "scikit_build_core.build"

[project]
name = "njoy"
description = "NJOY is a modular code that processes ENDF nuclear data into libraries for applications, with independent modules communicating via files."
authors = [{ name = "The NJOY Development Team", email = "njoy@lanl.gov" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]

keywords = [
    "Nuclear Data",
    "ENDF",
    "Nuclear Engineering",
    "Nuclear Physics",
    "Monte Carlo",
    "Neutron Transport",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD 3-Clause License",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Fortran",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://www.njoy21.io/NJOY2016/"
Documentation = "https://www.njoy21.io/NJOY2016/"
Repository = "https://github.com/njoy/NJOY2016"
Issues = "https://github.com/njoy/NJOY2016/issues"

[tool.scikit-build]
build.verbose = true
logging.level = "INFO"
wheel.install-dir = "njoy"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
