set( RESOURCES "${CMAKE_CURRENT_SOURCE_DIR}/resources" )

configure_file("${CMAKE_CURRENT_SOURCE_DIR}/execute.py"
               "${CMAKE_CURRENT_BINARY_DIR}/execute.py" COPYONLY )

add_subdirectory( "01" )
add_subdirectory( "02" )
add_subdirectory( "03" )
add_subdirectory( "04" )
add_subdirectory( "05" )
add_subdirectory( "06" )
add_subdirectory( "07" )
add_subdirectory( "08" )
add_subdirectory( "09" )
add_subdirectory( "10" )
add_subdirectory( "11" )
add_subdirectory( "12" )
add_subdirectory( "13" )
add_subdirectory( "14" )
add_subdirectory( "15" )
add_subdirectory( "16" )
add_subdirectory( "17" )
add_subdirectory( "18" )
add_subdirectory( "19" )
add_subdirectory( "20" )
add_subdirectory( "21" )
add_subdirectory( "22" )
add_subdirectory( "23" )
add_subdirectory( "24" )
add_subdirectory( "25" )
add_subdirectory( "26" )
add_subdirectory( "27" )
add_subdirectory( "28" )
add_subdirectory( "29" )
add_subdirectory( "30" )
add_subdirectory( "31" )
add_subdirectory( "32" )
add_subdirectory( "33" )
add_subdirectory( "34" )
add_subdirectory( "35" )
add_subdirectory( "36" )
add_subdirectory( "37" )
add_subdirectory( "38" )
add_subdirectory( "39" )
add_subdirectory( "40" )
add_subdirectory( "41" )
add_subdirectory( "42" )
add_subdirectory( "43" )
add_subdirectory( "44" )
add_subdirectory( "45" )
add_subdirectory( "46" )
add_subdirectory( "47" )
add_subdirectory( "48" )
add_subdirectory( "49" )
add_subdirectory( "50" )
add_subdirectory( "51" )
add_subdirectory( "52" )
add_subdirectory( "53" )
add_subdirectory( "54" )
add_subdirectory( "55" )
add_subdirectory( "56" )
add_subdirectory( "57" )
add_subdirectory( "58" )
add_subdirectory( "59" )
add_subdirectory( "60" )
add_subdirectory( "61" )
add_subdirectory( "62" )
add_subdirectory( "63" )
add_subdirectory( "64" )
add_subdirectory( "65" )
add_subdirectory( "66" )
add_subdirectory( "67" )
add_subdirectory( "68" )
add_subdirectory( "69" )
add_subdirectory( "70" )
add_subdirectory( "71" )
add_subdirectory( "72" )
add_subdirectory( "73" )
add_subdirectory( "74" )
add_subdirectory( "75" )
add_subdirectory( "76" )
add_subdirectory( "78" )
